import * as React from 'react';
import { Badge } from '../';
import renderer from 'react-test-renderer';

test('Badge component with required fields', () => {
	const badge = renderer.create(
      <Badge badgeContent={'123'}>Hello</Badge>
  ).toJSON();
	expect(badge.props.style).toEqual(undefined);
	expect(badge).toMatchSnapshot();
});

test('Badge component with style', () => {
	const badge = renderer.create(
      <Badge badgeContent={'123'} style={{ 'background-color':'green' }}>hello</Badge>
  ).toJSON();
	expect(badge.props.style).toEqual({ 'background-color':'green' });
	expect(badge).toMatchSnapshot();
});
